full-moon/tests/cases/fail/parser/table-8/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cases/fail/parser/table-8
---
error[ast]: expected an expression after `[`
  ┌─ source.lua:2:2
  │
2 │     [] = 1,
  │     ^

error[ast]: unexpected token, this needs to be a statement
  ┌─ source.lua:2:3
  │
2 │     [] = 1,
  │      ^


